# render

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: main-validation.yml  pr-validation.yml
assets_recipes/: README.md
cmake/: CompilerWarnings.cmake  Dependencies.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  ShaderCompilation.cmake  StandardSettings.cmake  Utils.cmake  Versioning.cmake  compile_shaders.cmake  validate_package_layout.cmake
docs/: architecture.md  build.md  ci.md  core_runtime.md  dependencies.md  filesystem.md  procgen.md  rendering.md  repo_layout.md  scene.md  serialization.md  testing.md  vfx.md
engine/: README.md  engine.cpp
engine/core/: assert.cpp  assert.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  core.hpp  hash.cpp  hash.hpp  log.cpp  log.hpp  math.cpp  math.hpp  memory.cpp  memory.hpp  profiling.cpp  profiling.hpp  random.cpp  random.hpp  threading.cpp  threading.hpp  transform.cpp  transform.hpp  types.hpp  uuid.cpp  uuid.hpp
engine/filesystem/: README.md  filesystem.cpp  filesystem.hpp
engine/platform/: platform_log.hpp  platform_runtime.hpp  platform_types.hpp
engine/platform/sdl/: platform_runtime_sdl.cpp
engine/procgen/: procgen.cpp  procgen.hpp
engine/render/: README.md  buffer_types.cpp  buffer_types.hpp  debug_renderer.cpp  debug_renderer.hpp  draw_submission.cpp  draw_submission.hpp  lighting.cpp  lighting.hpp  render_pass_system.cpp  render_pass_system.hpp  renderer.hpp  renderer_types.hpp  shader_library.cpp  shader_library.hpp  shader_types.hpp  texture_types.hpp  vfx.cpp  vfx.hpp
engine/render/bgfx/: renderer_bgfx.cpp
engine/scene/: README.md  scene.cpp  scene.hpp
engine/serialization/: binary_reader.cpp  binary_reader.hpp  binary_writer.cpp  binary_writer.hpp  bytes.hpp  core_types.cpp  core_types.hpp  errors.hpp  payloads.cpp  payloads.hpp  schema.cpp  schema.hpp  serialization.hpp
engine/shell/: main.cpp
game/: README.md
scripts/: bootstrap.ps1  bootstrap.sh  run_validations.ps1  run_validations.sh
shaders/: README.md  shaders.cmake
shaders/debug/renderer_debug/: fs_albedo.sc  fs_depth.sc  fs_normals.sc  fs_overdraw.sc  vs.sc
shaders/debug/triangle/: fs.sc  vs.sc
shaders/includes/: varying_color.def.sc
shaders/includes/core/: common.sh  transform.sh
shaders/includes/debug/: debug_color.sh
shaders/materials/unlit_color/: fs.sc  vs.sc
shaders/post/tonemap/: fs.sc
shaders/src/: fs_statement4.sc  vs_statement4.sc
shaders/vfx/ambient_sprite/: fs.sc  vs.sc
tests/: README.md
tests/core/: core_runtime_tests.cpp
tests/filesystem/: filesystem_tests.cpp
tests/headless/: headless_validation.cpp
tests/platform/: platform_types_tests.cpp
tests/procgen/: procgen_tests.cpp
tests/render/: debug_renderer_tests.cpp  geometry_submission_tests.cpp  lighting_pipeline_tests.cpp  render_pass_system_tests.cpp  renderer_lifecycle_tests.cpp  shader_pipeline_tests.cpp  vfx_system_tests.cpp
tests/scene/: scene_tests.cpp
tests/serialization/: serialization_tests.cpp
tools/: README.md
